load(
    "@gz//bazel/skylark:build_defs.bzl",
    "GZ_FEATURES",
    "GZ_ROOT",
    "GZ_VISIBILITY",
    "gz_configure_header",
    "gz_export_header",
    "gz_include_header",
)

public_headers_no_gen = glob(["include/gz/rendering/ogre2/*.hh"])

gz_export_header(
    name = "include/gz/rendering/ogre2/Export.hh",
    export_base = "GZ_RENDERING_OGRE2",
    lib_name = "gz-rendering-ogre2",
    visibility = ["//visibility:private"],
)

public_headers = public_headers_no_gen + [
    "include/gz/rendering/ogre2/Export.hh",
]

sources = glob([
    "src/*.cc",
    "src/*.hh",
    "src/terrain/Terra/include/Terra/*.h",
    "src/terrain/Terra/include/Terra/Hlms/*.h",
    "src/terrain/Terra/include/Terra/Hlms/PbsListener/*.h",
    "src/terrain/Terra/src/*.cpp",
    "src/terrain/Terra/src/Hlms/*.cpp",
    "src/terrain/Terra/src/Hlms/*.cpp.inc",
    "src/terrain/Terra/src/Hlms/PbsListener/*.cpp",
])

cc_library(
    name = "rendering_ogre2",
    srcs = sources,
    hdrs = public_headers,
    copts = [
        # Both in terrain/Terra
        "-Wno-sign-compare",
        "-Wno-strict-aliasing",
    ],
    includes = [
        "include",
        "src/terrain/Terra/include",
    ],
    local_defines = [
        "OGRE2_RESOURCE_PATH='\"./ogre2\"'",
        "OGRE2_VERSION='\"TODO: replace with correct string\"'",
    ],
    deps = [
        GZ_ROOT + "math/eigen3",
        GZ_ROOT + "rendering",
        GZ_ROOT + "third_party/ogre-next:OgreMain",
        GZ_ROOT + "third_party/ogre-next:ComponentHlmsUnlit",
        GZ_ROOT + "third_party/ogre-next:ComponentHlmsPbs",
        GZ_ROOT + "third_party/ogre-next:ComponentOverlay",
        GZ_ROOT + "plugin:register",
        GZ_ROOT + "third_party/ogre-next:RenderSystemVulkan_null",
        #GZ_ROOT + "third_party/ogre-next:RenderSystemVulkan_xcb"
        #GZ_ROOT + "third_party/ogre-next:RenderSystemGL3Plus_egl",
        GZ_ROOT + "third_party/ogre-next:Plugin_ParticleFX",
        "@spdlog",
    ],
)

cc_binary(
    name = "libgz-rendering-ogre2.so",
    srcs = [
        ":rendering_ogre2",
    ],
    data = ["src/media"],
    linkshared = True,
    visibility = GZ_VISIBILITY,
    deps = [
        ":rendering_ogre2",
        GZ_ROOT + "plugin:register",
    ],
)
